prevent collapsing navbars

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -92,7 +92,21 @@ h1{
 }
 
 
+.navbar-collapse.collapse {
+  display: block!important;
+}
 
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
+}
 /*@media (max-width: 480px)*/
 
 
