--- a/public/css/main.css
+++ b/public/css/main.css
@@ -486,35 +486,23 @@ legend {
   display: inline-block;
 }
 
-
-@media (max-width: 767px) {
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-        color: #777;
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-          color: #333;
-    }
-}
-
-/*PREVENT NAVBAR FROM COLLAPSING*/
-
 .navbar-collapse.collapse {
-display: block!important;
+  display: block!important;
 }
 
 .navbar-nav>li, .navbar-nav {
-float: left !important;
+  float: left !important;
 }
 
-
 .navbar-nav.navbar-right:last-child {
-margin-right: -15px !important;
+  margin-right: -15px !important;
 }
 
 .navbar-right {
-float: right!important;
+  float: right!important;
 }
+
+
 
 
 /* Desktops and laptops ----------- */
